# ManTranslator

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
mantranslator/: __init__.py  __main__.py  config.py  main.py
mantranslator/ai/: __init__.py  base.py  claude.py  gemini.py  openai_compat.py  prompts.py  registry.py
mantranslator/assets/fonts/: README.txt
mantranslator/core/: __init__.py  comic_detector.py  detection.py  inpaint.py  models.py  ocr.py  pipeline.py  render.py  tiling.py
mantranslator/gui/: __init__.py  app.py  editor_view.py  main_window.py  project_panel.py  provider_config.py  settings_panel.py  theme.py  worker.py
mantranslator/project/: __init__.py  glossary.py  manager.py
tests/: conftest.py  test_ai_parsing.py  test_glossary.py  test_render.py  test_tiling.py
tests/test1/test/: glossary.md  project.json
