[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mantranslator"
version = "0.1.0"
description = "AI-powered manga/webtoon translator that replaces text in-place with matched fonts and colors."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ManTranslator" }]
dependencies = [
    "PySide6>=6.6.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "manga-ocr>=0.1.11",
    "paddleocr>=2.7.0",
    "pytesseract>=0.3.10",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "shapely>=2.0.0",
    "pyclipper>=1.3.0",
    "torchsummary>=1.5.1",
    "tqdm>=4.41.0",
    "openai>=1.30.0",
    "google-generativeai>=0.7.0",
    "anthropic>=0.30.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[project.gui-scripts]
mantranslator = "mantranslator.main:main"

[tool.setuptools]
packages = ["mantranslator"]

[tool.setuptools.package-data]
mantranslator = ["assets/fonts/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
